<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:theme="@style/Prime_theme"
    android:paddingBottom="28dp"
    >

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56dp"
        app:title="@string/title"
        app:titleTextColor="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/search_button"
        android:text="@string/search"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/media"
        style="@style/media_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings"
        style="@style/settings_button" />

</LinearLayout>