<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main"
    android:paddingBottom="28dp"
    android:background="@color/dark_theme">
    <RelativeLayout
        android:id="@+id/panel_head"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title"
            android:textColor="#FFFFFF"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:textSize="22sp"
            android:gravity="top"
            style="@style/title"
            >
        </TextView>
    </RelativeLayout>

    <Button
        style="@style/dark_theme_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/search"
        app:icon="@drawable/search_icon"
        >

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/media"
        app:icon="@drawable/media_icon"
        style="@style/dark_theme_button"
        >
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/settings"
        app:icon="@drawable/settings_icon"
        style="@style/dark_theme_button"
        >
    </Button>

</LinearLayout>