<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:layout_marginTop="14dp"
            android:textSize="22sp"
            >
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dark_theme_settings_text"
            android:text="@string/dark_theme">
        </TextView>
        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginRight="6dp"
            android:thumbTint="@color/white_theme"
            android:trackTint="@color/color_switch_2"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dark_theme_settings_text"
            android:text="@string/share_app"
            >
        </TextView>
        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/share_icon_dark_theme"
            style="@style/icon_pos"
            >
        </View>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dark_theme_settings_text"
            android:text="@string/support"
            >
        </TextView>
        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/support_icon_dark_theme"
            style="@style/icon_pos"
            >
        </View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/dark_theme_settings_text"
            android:text="@string/user_agreement"
            >
        </TextView>
        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/mark_right_dark_theme"
            style="@style/icon_pos"
            >
        </View>
    </LinearLayout>
</LinearLayout>